--- a/index.html
+++ b/index.html
@@ -67,7 +67,7 @@ function createImage(src, fallbackEmoji) {
 
 const imgMo = createImage('mo.jpg', '🎅');
 const imgZinmin = createImage('zinmin.jpg', '👥');
-const imgCredit = createImage('credit.png', '💳');
+const imgCredit = createImage('credit.jpeg', '💳');
 const imgTrump = createImage('trump.jpg', '🇺🇸');
 
 let playerX = 180;
