--- a/index.html
+++ b/index.html
@@ -30,6 +30,28 @@
             text-shadow: 2px 2px #000;
             pointer-events: none;
         }
+        #controls {
+            position: absolute;
+            bottom: 20px;
+            width: 100%;
+            display: flex;
+            justify-content: space-around;
+            align-items: center;
+        }
+        #controls div {
+            width: 80px;
+            height: 80px;
+            background: rgba(255, 255, 255, 0.2);
+            color: white;
+            font-size: 40px;
+            display: flex;
+            justify-content: center;
+            align-items: center;
+            border: 2px solid white;
+            border-radius: 50%;
+            cursor: pointer;
+            user-select: none;
+        }
     </style>
 </head>
 <body>
@@ -41,6 +63,12 @@
     <p onclick="location.reload()">もういちどやる</p>
 </div>
 <canvas id="gameCanvas"></canvas>
+
+<div id="controls">
+    <div id="leftBtn">◀</div>
+    <div id="dropBtn">DROP</div>
+    <div id="rightBtn">▶</div>
+</div>
 
 <script>
 const canvas = document.getElementById('gameCanvas');
@@ -85,6 +113,34 @@ window.addEventListener('keydown', e => keys[e.code] = true);
 window.addEventListener('keyup', e => keys[e.code] = false);
 window.addEventListener('keydown', e => {
     if(e.code === 'Space') dropItem();
+});
+
+// タッチ操作
+const leftBtn = document.getElementById('leftBtn');
+const rightBtn = document.getElementById('rightBtn');
+const dropBtn = document.getElementById('dropBtn');
+
+leftBtn.addEventListener('touchstart', e => {
+    e.preventDefault();
+    keys['ArrowLeft'] = true;
+});
+leftBtn.addEventListener('touchend', e => {
+    e.preventDefault();
+    keys['ArrowLeft'] = false;
+});
+
+rightBtn.addEventListener('touchstart', e => {
+    e.preventDefault();
+    keys['ArrowRight'] = true;
+});
+rightBtn.addEventListener('touchend', e => {
+    e.preventDefault();
+    keys['ArrowRight'] = false;
+});
+
+dropBtn.addEventListener('touchstart', e => {
+    e.preventDefault();
+    dropItem();
 });
 
 function dropItem() {
